tempfile/auto_impl/tests/compile-fail/attr_on_unit_struct.rs
use auto_impl::auto_impl;


#[auto_impl(&, &mut)]
struct Foo(usize, String);


fn main() {}
