tempfile/auto_impl/tests/compile-fail/attr_on_unit_struct.stderr
error: expected `trait`
 --> tests/compile-fail/attr_on_unit_struct.rs:5:1
  |
5 | struct Foo(usize, String);
  | ^^^^^^
